# MosaicMagnifique

./: .gitignore  CIE2000Copy  CMakeCache.txt  CMakeLists.txt  COPYRIGHT  CUDA.props  ImageComparison.cpp  ImageComparison.hpp  Makefile  MosaicMagnifique.pro  MosaicMagnifique.sln  PhotoMosaic  PhotoMosaic.cpp  Photomosaic.pro  Preprocess  Preprocess.cpp  README.md  Shared.props  cellgrid.cpp  cellgrid.h  cells.cpp  cells.hpp  cellshape.cpp  cellshape.h  cmake_install.cmake  colourvisualisation.cpp  colourvisualisation.h  colourvisualisation.ui  common.pri  cudaphotomosaicdata.cpp  cudaphotomosaicdata.h  customgraphicsview.cpp  customgraphicsview.h  gridbounds.cpp  gridbounds.h  gridviewer.cpp  gridviewer.h  halvingspinbox.cpp  halvingspinbox.h  imageviewer.cpp  (+22 more)
Benchmark/: Benchmark.vcxproj  Benchmark.vcxproj.filters  Benchmark_Generator.h  Benchmark_MathKernels.h  Main.cpp  MathKernels.cu  MathKernels.cuh
Cells/: 4PointStar.mcs  6PointStar-1.mcs  6PointStar-2.mcs  6PointStar-3.mcs  Circle.mcs  Hexagon.mcs  Hexagon.xcf  HexagonOffset.xcf  IsocelesTriangle-45deg.mcs  IsocelesTriangle.mcs  Puzzle.mcs  YinAndYang.mcs
Demo/: Slides.odp
LightningTalk/: Slides.odp
Results/: FeatureDetection  FeatureDetection.cpp  Other.txt  makefile
src/: MatUtility.h  MosaicMagnifique-CUDA.vcxproj  MosaicMagnifique-CUDA.vcxproj.filters  MosaicMagnifique-Linux.pro  MosaicMagnifique-Windows.pro  MosaicMagnifique.vcxproj  MosaicMagnifique.vcxproj.filters  MosaicMagnifique_resource.rc  cellgrid.cpp  cellgrid.h  cellgroup.cpp  cellgroup.h  cellshape.cpp  cellshape.h  cellshapeeditor.cpp  (+60 more)
(+196 files in other folders)
